fix(demo): password input shift on mobile

--- a/demo/src/styles.scss
+++ b/demo/src/styles.scss
@@ -36,10 +36,3 @@ body {
     background: #121212;
   }
 }
-
-/* Prevent iOS Safari auto-zoom on input focus */
-@supports (-webkit-touch-callout: none) {
-  input[matInput] {
-    font-size: 16px;
-  }
-}
